--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -4,6 +4,6 @@
   </head>
   <body>
     Hello
-    <script src="js/common.js" type="text/javascript"></script>
+    <script src="resources/js/common.js" type="text/javascript"></script>
   </body>
 </html>
